# natural-language-processing

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Containerfile  README.md  app.py  build_container.sh  openapi3_1.yaml  openapi3_1.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  build_and_merge.yml  release.yml  smoke_test.yaml  smoke_test.yml  test.yml
docker/: compose.e2e.yml  compose.yml
natural_language_processing/: __init__.py  __main__.py  chunking.py  config.py  decorators.py  flair.py  flair_ner.py  gliner.py  gliner_ppn.py  ioc_finder.py  log.py  misc.py  mpnet_ner.py  nlp.py  post_process.py  predictor.py  predictor_factory.py  roberta.py  roberta_german.py  roberta_ner.py  roberta_ner_german.py  router.py  supported_languages.json
natural_language_processing/files/: demonyms_to_country_de.json  demonyms_to_country_en.json
natural_language_processing/tests/: clustered_news_item_list.json  conftest.py  news_item_list.json  test_analysis.py  test_api.py  test_ner.py  test_nlp.py  test_post_process.py
tests/: .env.test  conftest.py  test_chunking.py  test_containerfile.py  test_function.py  test_offline_startup.py  test_post_process.py
