[project]
name = "natural_language_processing"
description = "NLP Bot for Natural Language Processing in Taranis AI"
readme = "README.md"
license = {file = "LICENSE.md"}
maintainers = [{ name = "AIT", email = "stefania.sava@ait.ac.at" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "networkx",
    "flask",
    "requests",
    "gunicorn",
    "sentencepiece",
    "flair==0.10",  
    "torch",
    "pydantic-settings"    
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
"Source Code" = "https://github.com/taranis-ai/natural_language_processing"

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["natural_language_processing"]

[tool.ruff]
line-length = 142
target-version = "py312"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*_app_ctx_stack.*:DeprecationWarning",
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
