[project]
name = "natural_language_processing"
description = "NLP Bot for Natural Language Processing in Taranis AI"
readme = "README.md"
license = {file = "LICENSE.md"}
maintainers = [{ name = "AIT", email = "stefania.sava@ait.ac.at" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "networkx",
    "flask",
    "requests",
    "granian",
    "sentencepiece",
    "flair @ git+https://github.com/flairNLP/flair@master",
    "torch",
    "huggingface_hub",
    "pydantic-settings",
    "python-dotenv",
    "gliner>=0.2.16",
    "spacy>=3.8.7",
    "de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl",
    "inflect>=7.5.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "jsonschema", "ruff"]

[project.urls]
"Source Code" = "https://github.com/taranis-ai/natural_language_processing"

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
tag_regex = "^refs/pull/(\\d+)/merge$"

[tool.setuptools]
packages = ["natural_language_processing"]

[tool.ruff]
line-length = 142
target-version = "py312"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*_app_ctx_stack.*:DeprecationWarning",
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
