[project]
name = "natural-language-processing"
description = "NLP Bot for Natural Language Processing in Taranis AI"
readme = "README.md"
license = {file = "LICENSE.md"}
maintainers = [{ name = "AIT", email = "stefania.sava@ait.ac.at" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
requires-python = ">=3.13, <3.14"
dependencies = [
    "taranis-base-bot",
    "transformers",
    "torch",
    "accelerate",
    "gliner>=0.2.16",
    "simplemma>=1.1.2",
    "requests-mock>=1.12.1",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "jsonschema", "ruff"]

[project.urls]
"Source Code" = "https://github.com/taranis-ai/natural-language-processing"

[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
tag_regex = "^(?:refs/pull/\\d+/merge$|v(?P<version>\\d+\\.\\d+\\.\\d+))$"

[tool.setuptools]
packages = ["natural_language_processing"]

[tool.ruff]
line-length = 142
target-version = "py313"

[tool.ruff.lint]
ignore = ["E402"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*_app_ctx_stack.*:DeprecationWarning",
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
